# copier_fraud

./: .copier-answers.yml  Dockerfile  README.md  pyproject.toml
.github/workflows/: hello.yml
src/my_project/: main.py
test/: test_main.py
